# todoApp-nextjs-fastapi

frontend with nextJs/: package-lock.json
frontend with nextJs/src/app/: page.tsx
frontend with nextJs/src/app/components/: AddUser.tsx  Addtodo.tsx  Adduser.tsx  TodoList.tsx  addTodosWithUsers.tsx  todoCrud.tsx
frontend with nextJs/src/app/lib/: crud.ts
frontend with nextJs/src/app/types/: commontypes.ts
frontend with nextJs/src/app/ui/: Addtodo.tsx
todo_api/: .env  pyproject.toml
todo_api/todo_api/: main.py
todo_api/todo_api/config/: db.py
todo_api/todo_api/models/: todo.py
